envoyproxy_operator/test-envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 18065
      traffic_direction: INBOUND
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                upgrade_configs:
                  - upgrade_type: websocket
                tracing:
                  provider:
                    name: envoy.tracers.zipkin
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                      collector_cluster: jaeger-collector
                      collector_endpoint: "/api/v2/spans"
                      shared_span_context: false
                      collector_endpoint_version: HTTP_JSON
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: service1_route
                  virtual_hosts:
                    - name: service1
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api/v4/websocket"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-api-websocket
                        - match:
                            prefix: "/api/v4/channels"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-api-channels
                        - match:
                            prefix: "/api/v4/teams"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-api-teams
                        - match:
                            prefix: "/api/v4/users"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-api-users
                        - match:
                            prefix: "/plugins"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-plugins
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                          decorator:
                            operation: mattermost-webapp
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 18066
      traffic_direction: OUTBOUND
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                upgrade_configs:
                  - upgrade_type: websocket
                tracing:
                  provider:
                    name: envoy.tracers.zipkin
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                      collector_cluster: jaeger-collector
                      collector_endpoint: "/api/v2/spans"
                      shared_span_context: false
                      collector_endpoint_version: HTTP_JSON
                codec_type: AUTO
                stat_prefix: egress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: service2_route
                  virtual_hosts:
                    - name: service2
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: mattermost-push-proxy
                          decorator:
                            operation: push-notification
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:

    - name: local_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8065
    - name: jaeger-collector
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: jaeger-collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: jaeger-collector
                      port_value: 9411

    - name: mattermost-push-proxy
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: mattermost-push-proxy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mattermost-push-proxy-svc
                      port_value: 8066

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
# Events:  <none>
